# chatserver

./: README.md  pyproject.toml
chatserver/: __main__.py  protocol.py  server.py
chatserver/plugins/: __init__.py  helperbot.py  plugin.py
